<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_promises"
        android:icon="@drawable/ic_nav_promises_selector"
        android:title="@string/nav_promises" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_nav_history_selector"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_nav_stats_selector"
        android:title="@string/nav_stats" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_selector"
        android:title="@string/nav_profile" />
</menu>